--- a/templates/pages/main/index.html.tt
+++ b/templates/pages/main/index.html.tt
@@ -70,7 +70,7 @@
         collaboration, fellowship, and mutual encouragement.
     </p>
     <p>
-        At its core, Quizzing has always been about writing God's Word on
+        At its core, Quizzing is about writing God's Word on
         hearts. By appealing to the transformational power of Scripture,
         Quizzing is the catalyst that changes many lives across the world.
         Quizzing thrives in several countries beginning with its origin in
