Style home page h1 to match nav

--- a/templates/pages/main/index.html.tt
+++ b/templates/pages/main/index.html.tt
@@ -2,7 +2,7 @@
 
 <div class="h1_img_side">
     <h1>
-        Christian<br>
+        <span class="christian">Christian</span><br>
         Bible<br>
         Quizzing
     </h1>
