--- a/config/assets/sass/article/_h1_img_side.scss
+++ b/config/assets/sass/article/_h1_img_side.scss
@@ -28,9 +28,13 @@ article {
         }
 
         h1 {
-            font-variant: small-caps;
+            text-transform: uppercase;
             font-size   : 300%;
             line-height : 1em;
+
+            span.christian {
+                font-weight: normal;
+            }
         }
 
         img {
