--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -52,7 +52,10 @@
         <a href="[% c.url_for('/slack') %]" class="button">Slack
             <span class="material-symbols-outlined inline">forum</span></a>
 
-        <div class="login">Logged in as: [% user.data.email %]</div>
+        <div class="login">
+            Logged in as:
+            <a href="[% c.url_for( path_part_prefix _ '/user/tools' ) %]">[% user.data.email %]</a>
+        </div>
     [% END %]
 </header>
 
