SOPs update and link edge-case fixes

--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -89,7 +89,7 @@
                                     ? '//' _ node.subdomain _ '.' _ req_info.domain
                                     : (
                                         ( req_info.region AND req_info.path_part )
-                                            ? '../../' _ req_info.region.key
+                                            ? path_part_prefix
                                             : ''
                                     ) _ node.href;
                             END;
