--- a/templates/pages/meeting/view.html.tt
+++ b/templates/pages/meeting/view.html.tt
@@ -20,7 +20,21 @@
 [% IF meeting.data.info.motions %]
     <h2>Motions/Votes: [% meeting.data.info.motions.size %]</h2>
     [% FOR motion IN meeting.data.info.motions %]
-        <blockquote>[% motion | markdownificate %]</blockquote>
+        <blockquote>
+            [% motion | markdownificate %]
+
+            [% IF meeting.is_active AND user.is_qualified_delegate %]
+                <div style="
+                    margin-top : -1.5em;
+                    margin-left: 1em;
+                    font-size  : 0.75em;
+                    line-height: 2em;
+                "><i>(<a href="[% c
+                    .url_for( '/meeting/' _ meeting.id _ '/vote/delete' )
+                    .query( motion => motion )
+                %]">Delete Motion</a>)</i></div>
+            [% END %]
+        </blockquote>
 
         [% all_votes = meeting.all_votes %]
         [% IF all_votes AND all_votes.$motion.keys.size %]
@@ -56,7 +70,7 @@
     [% END %]
 [% END %]
 
-[% IF NOT meeting.is_closed AND user.is_qualified_delegate %]
+[% IF meeting.is_active AND user.is_qualified_delegate %]
     <form method="post" action="[% c.url_for( '/meeting/' _ meeting.id _ '/vote/create' ) %]">
         <fieldset>
             <legend>Create a Vote Item</legend>
