User info display improvements

--- a/config/assets/sass/_misc.scss
+++ b/config/assets/sass/_misc.scss
@@ -58,3 +58,13 @@ div#order_lms {
 img.border {
     border: 1px solid colors.$lines;
 }
+
+@media (min-width: 500px) {
+    div.user_list {
+        table {
+            td:first-child {
+                white-space: nowrap;
+            }
+        }
+    }
+}
