--- a/templates/pages/user/list.html.tt
+++ b/templates/pages/user/list.html.tt
@@ -7,4 +7,4 @@
 
 <h1>[% page.title %]</h1>
 
-[% PROCESS user_list.html.tt, users %]
+[% PROCESS user_list.html.tt, data = { users => users, show_orgs => 1, show_phone => 0, show_email => 0 } %]
