Fix missing org_id in org edit

--- a/templates/pages/org/crud.html.tt
+++ b/templates/pages/org/crud.html.tt
@@ -40,5 +40,6 @@
 
     <br>
     <input type="hidden" name="usage" value="[% usage %]">
+    <input type="hidden" name="org_id" value="[% org_id %]">
     <button type="submit" class="colored">Save Organization</button>
 </form>
